some visual fixes

--- a/Web/Views/Find/Index2.cshtml
+++ b/Web/Views/Find/Index2.cshtml
@@ -626,7 +626,7 @@ else
                         <div class="mt-4 col-12">
                             @if (Model.RecommendUsers != null)
                             {
-                                <h5 class="t-smbold t-lg clr-mute">Для ваших идей</h5>
+                                <h5 class="pb-2 t-smbold t-lg clr-mute">Для ваших идей</h5>
                                 @foreach (var recUser in Model.RecommendUsers)
                                 {
                                     <div class="mb-2 d-flex">
