add invites and some bug fixing

--- a/Web/Views/Chat/Index.cshtml
+++ b/Web/Views/Chat/Index.cshtml
@@ -18,7 +18,7 @@
             <div class="d-flex position-relative">
 
                 <!--New Idea-->
-                <div id="newIdeaWindow" class="d-none rounded">
+                <div id="newIdeaWindow" class="window_rounded_shadow">
                     <div class="b-bottom d-flex p-2 ps-3 col-12 align-items-center justify-content-between">
                         <span class="clr-white t-md">
                             <svg xmlns="http://www.w3.org/2000/svg"
@@ -126,7 +126,7 @@
                 </div>
                 <!---->
                 <!--NewChat-->
-                <div id="newChatWindow" class="d-none rounded">
+                <div id="newChatWindow" class="window_rounded_shadow">
                     <div class="b-bottom d-flex p-2 ps-3 col-12 align-items-center justify-content-between">
                         <span class="clr-white t-md">
                             <svg xmlns="http://www.w3.org/2000/svg"
@@ -188,7 +188,62 @@
                     </div>
                 </div>
                 <!---->
-
+                <!--Invite-->
+                <div id="inviteWindow" class="window_rounded_shadow">
+                    <div class="b-bottom d-flex p-2 ps-3 col-12 align-items-center justify-content-between">
+                        <span class="clr-white t-md">
+                            <svg xmlns="http://www.w3.org/2000/svg"
+                                 width="19"
+                                 height="19"
+                                 fill="currentColor"
+                                 class="clr-mute bi bi-person-plus"
+                                 viewBox="0 0 16 16">
+                                <path d="M6 8a3 3 0 1 0 0-6 3 3 0 0 0 0 6zm2-3a2 2 0 1 1-4 0 2 2 0 0 1 4 0zm4 8c0 1-1 1-1 1H1s-1 0-1-1 1-4 6-4 6 3 6 4zm-1-.004c-.001-.246-.154-.986-.832-1.664C9.516 10.68 8.289 10 6 10c-2.29 0-3.516.68-4.168 1.332-.678.678-.83 1.418-.832 1.664h10z" />
+                                <path fill-rule="evenodd"
+                                      d="M13.5 5a.5.5 0 0 1 .5.5V7h1.5a.5.5 0 0 1 0 1H14v1.5a.5.5 0 0 1-1 0V8h-1.5a.5.5 0 0 1 0-1H13V5.5a.5.5 0 0 1 .5-.5z" />
+                            </svg>
+                            Пригласить в идею
+                        </span>
+                        <button class="closeInviteWindowBtn btn btn-sm bg-transparent clr-white">
+                            <svg xmlns="http://www.w3.org/2000/svg"
+                                 width="24"
+                                 height="24"
+                                 fill="currentColor"
+                                 class="bi bi-x"
+                                 viewBox="0 0 16 16">
+                                <path d="M4.646 4.646a.5.5 0 0 1 .708 0L8 7.293l2.646-2.647a.5.5 0 0 1 .708.708L8.707 8l2.647 2.646a.5.5 0 0 1-.708.708L8 8.707l-2.646 2.647a.5.5 0 0 1-.708-.708L7.293 8 4.646 5.354a.5.5 0 0 1 0-.708z" />
+                            </svg>
+                        </button>
+                    </div>
+                    <div class="col-12 p-4">
+                        <div class="p-3 d-flex justify-content-center align-items-center">
+                            <div class="d-flex align-items-center">
+                                <img id="inviteWindowAvatar"
+                                     height="33"
+                                     width="33"
+                                     class="rounded-circle me-1"
+                                     src="" />
+                                <div class="ps-1">
+                                    <span class="t-sm clr-mute">Пригласить</span>
+                                    <br />
+                                    <span id="inviteWindowUsername"></span>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="mt-2 b-left col-12 ps-3 pe-3">
+                            <span class="t-sm clr-mute">Выберите идею</span>
+                            <div class="pt-1 custom-scroll" id="inviteWindowLoad">
+                                <div id="inviteWindowLoadPrev" class="d-none d-flex justify-content-center h-100 align-items-center">
+                                    <div class="pt-4 spinner-border clr-mute" role="status">
+                                        <span class="sr-only"></span>
+                                    </div>
+                                </div>
+                                
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <!---->
             </div>
         </div>
     </div>
@@ -505,12 +560,21 @@ else
                                                 <ul class="rad-md b-all clr-white t-md bg-mute-window dropdown-menu"
                                                     aria-labelledby="dropdownMenuButton1">
                                                     <li>
-                                                        <a class="hover-white t-med clr-mute t-sm t-md dropdown-item"
-                                                           href="#">Профиль</a>
+                                                        <a id="activeChatProfileLink" class="hover-white t-med clr-mute t-sm t-md dropdown-item">Профиль</a>
                                                     </li>
                                                     <li>
                                                         <button class="showInviteWindowBtn btn-unfocus btn bg-transparen  hover-white t-med clr-mute t-sm t-md dropdown-item">
                                                             Пригласить
+                                                            <svg xmlns="http://www.w3.org/2000/svg"
+                                                                 width="18"
+                                                                 height="18"
+                                                                 fill="currentColor"
+                                                                 class="ms-1 bi bi-person-plus"
+                                                                 viewBox="0 0 16 16">
+                                                                <path d="M6 8a3 3 0 1 0 0-6 3 3 0 0 0 0 6zm2-3a2 2 0 1 1-4 0 2 2 0 0 1 4 0zm4 8c0 1-1 1-1 1H1s-1 0-1-1 1-4 6-4 6 3 6 4zm-1-.004c-.001-.246-.154-.986-.832-1.664C9.516 10.68 8.289 10 6 10c-2.29 0-3.516.68-4.168 1.332-.678.678-.83 1.418-.832 1.664h10z" />
+                                                                <path fill-rule="evenodd"
+                                                                      d="M13.5 5a.5.5 0 0 1 .5.5V7h1.5a.5.5 0 0 1 0 1H14v1.5a.5.5 0 0 1-1 0V8h-1.5a.5.5 0 0 1 0-1H13V5.5a.5.5 0 0 1 .5-.5z" />
+                                                            </svg>
                                                         </button>
                                                     </li>
                                                 </ul>
