--- a/Web/wwwroot/css/style.css
+++ b/Web/wwwroot/css/style.css
@@ -6,6 +6,14 @@ a {
     text-decoration: none !important;
 }
 
+.ideaInviteLink {
+    max-width: 190px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    font-weight: 600 !important;
+}
+
 .container {
     max-width: 1129px !important;
 }
