--- a/Web/Views/Chat/Index.cshtml
+++ b/Web/Views/Chat/Index.cshtml
@@ -18,7 +18,7 @@
             <div class="d-flex position-relative">
 
                 <!--New Idea-->
-                <div id="newIdeaWindow" class="window_rounded_shadow">
+                <div id="newIdeaWindow" class="d-none window_rounded_shadow">
                     <div class="b-bottom d-flex p-2 ps-3 col-12 align-items-center justify-content-between">
                         <span class="clr-white t-md">
                             <svg xmlns="http://www.w3.org/2000/svg"
@@ -126,7 +126,7 @@
                 </div>
                 <!---->
                 <!--NewChat-->
-                <div id="newChatWindow" class="window_rounded_shadow">
+                <div id="newChatWindow" class="d-none window_rounded_shadow">
                     <div class="b-bottom d-flex p-2 ps-3 col-12 align-items-center justify-content-between">
                         <span class="clr-white t-md">
                             <svg xmlns="http://www.w3.org/2000/svg"
@@ -189,7 +189,7 @@
                 </div>
                 <!---->
                 <!--Invite-->
-                <div id="inviteWindow" class="window_rounded_shadow">
+                <div id="inviteWindow" class="d-none window_rounded_shadow">
                     <div class="b-bottom d-flex p-2 ps-3 col-12 align-items-center justify-content-between">
                         <span class="clr-white t-md">
                             <svg xmlns="http://www.w3.org/2000/svg"
