--- a/Web/Views/Home/Index.cshtml
+++ b/Web/Views/Home/Index.cshtml
@@ -305,7 +305,7 @@
 
                                 <div class="d-none mb-2 repostToUser">
                                     <a>
-                                        <img class="me-1" src="./avatar.jpg" />
+                                        <img class="me-1" src="#" />
                                         XXbebra
                                     </a>
                                     <button class="asyncRepostBtn btn">Отправить</button>
