--- a/Web/Views/Idea/Index.cshtml
+++ b/Web/Views/Idea/Index.cshtml
@@ -203,8 +203,10 @@
                         <div class="d-flex col-12 align-items-center justify-content-between">
                             <div class="position-relative col">
                                 <div class="position-absolute z-10 p-3 ps-4 d-flex align-items-center">
-                                    <h5 id="topicDetailName" class="topic_hide_elems z-1 t-window-title t-shadow">                                        
+                                    <h5 id="topicDetailName" class="topic_hide_elems z-1 t-window-title t-shadow">
                                     </h5>
+                                    <div id="topicDetailEdit">
+                                    </div>
                                     <a id="topicDetailAuthorLink" class="topic_hide_elems ms-2 t-med t-sm text-muted">
                                         <img src=""
                                              height="24"
@@ -502,7 +504,6 @@
                                     </button>
                                 </div>
                                 <form id="topicWindowForm"
-                                      
                                       style="height:50px!important"
                                       class="rad-md col ms-2 flex-form-dark">
                                     <input id="topicCommentInput"
@@ -522,6 +523,115 @@
                                 </form>
                             </div>
                         </section>
+                    </div>
+                </div>
+                <!---->
+                <!--New Topic-->
+                <div id="newTopicWindow" class="d-none window_rounded_shadow">
+                    <div class="b-bottom d-flex p-2 ps-3 col-12 align-items-center justify-content-between">
+                        <span class="clr-white t-md">
+                            <svg xmlns="http://www.w3.org/2000/svg"
+                                 width="19"
+                                 height="19"
+                                 fill="currentColor"
+                                 class="me-1 clr-mute bi bi-book-half"
+                                 viewBox="0 0 16 16">
+                                <path d="M8.5 2.687c.654-.689 1.782-.886 3.112-.752 1.234.124 2.503.523 3.388.893v9.923c-.918-.35-2.107-.692-3.287-.81-1.094-.111-2.278-.039-3.213.492V2.687zM8 1.783C7.015.936 5.587.81 4.287.94c-1.514.153-3.042.672-3.994 1.105A.5.5 0 0 0 0 2.5v11a.5.5 0 0 0 .707.455c.882-.4 2.303-.881 3.68-1.02 1.409-.142 2.59.087 3.223.877a.5.5 0 0 0 .78 0c.633-.79 1.814-1.019 3.222-.877 1.378.139 2.8.62 3.681 1.02A.5.5 0 0 0 16 13.5v-11a.5.5 0 0 0-.293-.455c-.952-.433-2.48-.952-3.994-1.105C10.413.809 8.985.936 8 1.783z" />
+                            </svg>
+                            Новый топик
+                        </span>
+                        <button class="closeNewTopicWindowBtn btn btn-sm bg-transparent clr-white">
+                            <svg xmlns="http://www.w3.org/2000/svg"
+                                 width="24"
+                                 height="24"
+                                 fill="currentColor"
+                                 class="bi bi-x"
+                                 viewBox="0 0 16 16">
+                                <path d="M4.646 4.646a.5.5 0 0 1 .708 0L8 7.293l2.646-2.647a.5.5 0 0 1 .708.708L8.707 8l2.647 2.646a.5.5 0 0 1-.708.708L8 8.707l-2.646 2.647a.5.5 0 0 1-.708-.708L7.293 8 4.646 5.354a.5.5 0 0 1 0-.708z" />
+                            </svg>
+                        </button>
+                    </div>
+                    <div class="col-12 p-4">
+                        <div class="text-center pt-3 pb-4">
+                            <img src="~/media/userAvatars/@avatar"
+                                 height="44"
+                                 width="44"
+                                 class="b-all box-shadow rounded-circle" />
+                            <svg xmlns="http://www.w3.org/2000/svg"
+                                 width="46"
+                                 height="46"
+                                 fill="currentColor"
+                                 class="ms-1 clr-white bi bi-book-half"
+                                 viewBox="0 0 16 16">
+                                <path d="M8.5 2.687c.654-.689 1.782-.886 3.112-.752 1.234.124 2.503.523 3.388.893v9.923c-.918-.35-2.107-.692-3.287-.81-1.094-.111-2.278-.039-3.213.492V2.687zM8 1.783C7.015.936 5.587.81 4.287.94c-1.514.153-3.042.672-3.994 1.105A.5.5 0 0 0 0 2.5v11a.5.5 0 0 0 .707.455c.882-.4 2.303-.881 3.68-1.02 1.409-.142 2.59.087 3.223.877a.5.5 0 0 0 .78 0c.633-.79 1.814-1.019 3.222-.877 1.378.139 2.8.62 3.681 1.02A.5.5 0 0 0 16 13.5v-11a.5.5 0 0 0-.293-.455c-.952-.433-2.48-.952-3.994-1.105C10.413.809 8.985.936 8 1.783z" />
+                            </svg>
+                        </div>
+                        <div class="mt-2 col-12 d-flex justify-content-center">
+                            <form data-guid="@Model.Idea.Guid" id="newTopicForm" class="col-10">
+                                <div class="col-12 mb-2">
+                                    <input type="text"
+                                           class="form-control"
+                                           id="floatingInput" />
+                                    <label class="pt-1 t-sm clr-mute" for="floatingInput">
+                                        Придумайте название
+                                    </label>
+                                </div>
+                                <div class="col-12">
+                                    <textarea style="height: 116px; resize: none !important;"
+                                              type="text"
+                                              class="form-control"
+                                              id="floatingInput"></textarea>
+                                    <label class="pt-1 t-sm clr-mute" for="floatingInput">
+                                        Опишите эту тему, другие смогут комментировать топик
+                                    </label>
+                                </div>
+                                <button type="submit" class="mt-4 icon-link-btn">
+                                    Создать
+                                </button>
+                            </form>
+                        </div>
+                    </div>
+                </div>
+                <!---->
+                <!--Reacts-->
+                <div id="reactWindow" class="d-none window_rounded_shadow">
+                    <div class="b-bottom d-flex p-2 ps-3 col-12 align-items-center justify-content-between">
+                        <span class="clr-white t-md t-med">
+                            <svg xmlns="http://www.w3.org/2000/svg"
+                                 width="19"
+                                 height="19"
+                                 fill="currentColor"
+                                 class="clr-mute bi bi-emoji-heart-eyes"
+                                 viewBox="0 0 16 16">
+                                <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z" />
+                                <path d="M11.315 10.014a.5.5 0 0 1 .548.736A4.498 4.498 0 0 1 7.965 13a4.498 4.498 0 0 1-3.898-2.25.5.5 0 0 1 .548-.736h.005l.017.005.067.015.252.055c.215.046.515.108.857.169.693.124 1.522.242 2.152.242.63 0 1.46-.118 2.152-.242a26.58 26.58 0 0 0 1.109-.224l.067-.015.017-.004.005-.002zM4.756 4.566c.763-1.424 4.02-.12.952 3.434-4.496-1.596-2.35-4.298-.952-3.434zm6.488 0c1.398-.864 3.544 1.838-.952 3.434-3.067-3.554.19-4.858.952-3.434z" />
+                            </svg>
+                            Реакции
+                        </span>
+                        <button class="closeReactWindowBtn btn btn-sm bg-transparent clr-white">
+                            <svg xmlns="http://www.w3.org/2000/svg"
+                                 width="24"
+                                 height="24"
+                                 fill="currentColor"
+                                 class="bi bi-x"
+                                 viewBox="0 0 16 16">
+                                <path d="M4.646 4.646a.5.5 0 0 1 .708 0L8 7.293l2.646-2.647a.5.5 0 0 1 .708.708L8.707 8l2.647 2.646a.5.5 0 0 1-.708.708L8 8.707l-2.646 2.647a.5.5 0 0 1-.708-.708L7.293 8 4.646 5.354a.5.5 0 0 1 0-.708z" />
+                            </svg>
+                        </button>
+                    </div>
+                    <div class="text-center col-12 p-4">
+                        <div class="pt-3 pb-3">
+                            <span class="t-lg t-bold clr-white">@Model.Idea.Name</span>
+                        </div>
+                        <div class="col-12 d-flex flex-wrap">
+                            @foreach (var react in Model.Idea.Reactions)
+                            { 
+                            <div class="aside_reaction col-6">
+                                @react.Value
+                                <span>@react.Count</span>
+                            </div>
+                            }
+                        </div>
                     </div>
                 </div>
                 <!---->
@@ -786,7 +896,7 @@ else
                   url(../media/ideaAvatars/@Model.Idea.AvatarName);
               ">
                         <div class="p-sm-2 p-md-3 text-start col-12">
-                            <h3 class="mb-0 t-idea-slide-md">
+                            <h3 class="mb-xl-2 t-idea-slide-md">
                                 @Model.Idea.Name
                             </h3>
                             <div class="idea_modders pb-4 t-shadow t-smbold clr-mute">
@@ -975,7 +1085,7 @@ else
                             <div class="col-12">
                                 @foreach (var topic in Model.TopicList.Topics)
                                 { 
-                                <div class="col-12 idea_content_section">
+                                <div class="pb-2 col-12 idea_content_section">
                                     <a asp-action="@topic.AuthorGuid" asp-controller="user" class="pt-1 pt-lg-2">
                                         <img height="33" width="33" src="~/media/userAvatars/@topic.AuthorAvatar" />
                                     </a>
