--- a/Web/wwwroot/css/idea.css
+++ b/Web/wwwroot/css/idea.css
@@ -84,7 +84,7 @@
     }
 
     .goalMessage a {
-        font-size: 13px !important;
+        font-size: 13px;
         color: white !important;
         font-weight: 500;
     }
