--- a/Web/Views/Idea/Index.cshtml
+++ b/Web/Views/Idea/Index.cshtml
@@ -1258,7 +1258,7 @@ else
                                 </a>
                             </li>
                             <li class="p-0 col text-center idea_menu_link nav-item">
-                                <a class="p-3 ps-1 pe-1 ps-lg-2 ps-xl-3 pe-xl-3 nav-link hover-white">
+                                <a asp-action="@Model.Idea.Guid" asp-controller="idea" asp-route-section="editGeneral" class="p-3 ps-1 pe-1 ps-lg-2 ps-xl-3 pe-xl-3 nav-link hover-white">
                                     <svg xmlns="http://www.w3.org/2000/svg"
                                          width="16"
                                          height="16"
